--- a/_config.yml
+++ b/_config.yml
@@ -28,14 +28,14 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
-  # facebook: your_username
+  facebook: https://www.facebook.com/profile.php?id=100009354275501
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-  # linkedin: your_username
+  linkedin: https://www.linkedin.com/in/nyi-nyi-soe-paing-51231717b/
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
